--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -57,7 +57,7 @@
               class="button">
               Sign Up
             </md-button>
-            <md-button class="md-raised md-accent md-padding" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
+            <md-button  href="/notavailable" class="md-raised md-accent md-padding" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
               class="button">
               Show me more benefits
             </md-button>
