--- a/modules/core/client/views/outsourcing.client.view.html
+++ b/modules/core/client/views/outsourcing.client.view.html
@@ -7,7 +7,7 @@
           Magically Simple Outsourcing
         </div>
         <div class="heroTextTwo">
-          Guide your offshore teams through exactly how they should perform tasks,.
+          Guide your offshore teams through exactly how they should perform tasks.
         </div>
         <br>
         <md-button class="md-raised md-primary splash" href="/notavailable">
@@ -24,7 +24,7 @@
     <div flex style="text-align:center" class="salesToolWorkflow" flex-order-xs="2">
     </div>
     <div flex class="rightTextExample" flex-order-xs="1">
-      <h2> Create easy guided workflows for your team </h2>
+      <h2> Create easy guided workflows for your teams </h2>
       <h3> Merlin show your offshore teams how to perform tasks inside of the software itself.
         <br> No more retraining or quality issues.</h3> 
     </div>
@@ -32,7 +32,8 @@
   <div layout="row" layout-xs="column">
     <div flex class="leftTextExample">
       <h2> Ensure your team performs certain tasks </h2>
-      <h3> Merlin allows you to create onboarding tasks for new hires, and can bring up guides every time for consistency and reporting. </h3> 
+      <h3> Merlin allows you to create onboarding tasks for new hires, <br>
+      and can bring up guides every time for consistency and reporting. </h3> 
     </div>
     <div flex style="text-align:center" class="hrToolTodo">
     </div>
