--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -3,19 +3,19 @@
     <div flex class="merlinScreenshot" flex-order-xs="2">
     </div>
     <div flex class="merlinHero" flex-order-xs="1">
-        <div class="heroText">
-          Magically Simple Onboarding
-        </div>
-        <div class="heroTextTwo">
-          Teach your staff inside of the products they actually use.
-        </div>
-        <br>
-        <md-button class="md-raised md-primary splash" href="/notavailable">
-          Start your free trial
-        </md-button>
-        <md-button class="md-raised md-secondary splash" href="/notavailable">
-          View Examples
-        </md-button>
+      <div class="heroText">
+        Magically Simple Onboarding
+      </div>
+      <div class="heroTextTwo">
+        Teach your staff inside of the products they actually use.
+      </div>
+      <br>
+      <md-button class="md-raised md-primary splash" href="/notavailable">
+        Start your free trial
+      </md-button>
+      <md-button class="md-raised md-secondary splash" href="/notavailable">
+        View Examples
+      </md-button>
     </div>
   </div>
 </section>
@@ -26,13 +26,13 @@
     <div flex class="rightTextExample" flex-order-xs="1">
       <h2> Create easy guided workflows for your team </h2>
       <h3> Merlin show your staff how to use the web applications your company uses inside of the software itself.
-        <br> No more searching in help centers or 2 hour webinars. </h3> 
+        <br> No more searching in help centers or 2 hour webinars. </h3>
     </div>
   </div>
   <div layout="row" layout-xs="column">
     <div flex class="leftTextExample">
       <h2> Ensure your team performs certain tasks </h2>
-      <h3> Merlin allows you to create onboarding tasks and ensures they perform them, <br> giving you piece of mind. </h3> 
+      <h3> Merlin allows you to create onboarding tasks and ensures they perform them, <br> giving you piece of mind. </h3>
     </div>
     <div flex style="text-align:center" class="hrToolTodo">
     </div>
@@ -43,21 +43,21 @@
     <div flex class="rightTextExample" flex-order-xs="1">
       <h2> So easy to setup </h2>
       <h3> Just get a team member or manager to perform the task once using the extension and we'll record how they did it.
-         <br> No more wasted time learning LMS systems.</h3> 
+        <br> No more wasted time learning LMS systems.</h3>
     </div>
   </div>
 </section>
 <md-content class="signUpHero md-padding" style="text-align:center">
   <center>
-          <h3> Signup today for your free trial today! </h3>
-            <md-button href="/notavailable" class="md-raised md-padding" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
-              class="button">
-              Sign Up
-            </md-button>
-            <md-button href="/notavailable" class="md-raised md-accent md-padding" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
-              class="button">
-              Show me more benefits
-            </md-button>
+    <h3> Signup today for your free trial today! </h3>
+    <md-button href="/notavailable" class="md-raised md-padding" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
+      class="button">
+      Sign Up
+    </md-button>
+    <md-button href="/notavailable" class="md-raised md-accent md-padding" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
+      class="button">
+      Show me more benefits
+    </md-button>
   </center>
 </md-content>
 <md-content class="md-padding" style="text-align:center">
@@ -88,5 +88,7 @@
 </md-content>
 
 <section class="md-padding md-docs-dark-theme">
+
   Copyright 2016 Merlin Onboarding. All rights reserved.
+  <a href="https://mixpanel.com/f/partner" rel="nofollow"><img src="//cdn.mxpnl.com/site_media/images/partner/badge_light.png" alt="Mobile Analytics" /></a>
 </section>
