--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -11,11 +11,12 @@
         </div>
         <br>
         <md-button class="md-raised md-primary splash" href="/notavailable">
-          Start your free trial
+          Request Beta Access
         </md-button>
+        <!--
         <md-button class="md-raised md-secondary splash" href="/notavailable">
           View Examples
-        </md-button>
+        </md-button> -->
     </div>
   </div>
 </section>
