--- a/modules/core/client/views/notavailable.client.view.html
+++ b/modules/core/client/views/notavailable.client.view.html
@@ -2,10 +2,10 @@
   <div class="notavailableSplash md-default-theme">
 
     <div class="heroText" style="text-align:center; padding-top: 20px">
-      Merlin is not currently available yet
+      Merlin is currently in closed beta.
     </div>
     <div class="heroTextTwo" style="text-align:center">
-      Sign up to our newsletter below though for early access.
+      Sign up to our newsletter below for an invite.
     </div>
 
     <!-- Begin MailChimp Signup Form -->
