--- a/modules/core/client/views/outsourcing.client.view.html
+++ b/modules/core/client/views/outsourcing.client.view.html
@@ -11,11 +11,11 @@
         </div>
         <br>
         <md-button class="md-raised md-primary splash" href="/notavailable">
-          Join the beta
+          Request Beta Access
         </md-button>
-        <md-button class="md-raised md-secondary splash" href="/notavailable">
+        <!-- <md-button class="md-raised md-secondary splash" href="/notavailable">
           View Examples
-        </md-button>
+        </md-button> -->
     </div>
   </div>
 </section>
