--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -6,11 +6,14 @@
 </a>
 <span flex=""></span>
 <div hide-xs hide-sm layout="row">
+  <!--
 <md-button href="/notavailable">Use cases</md-button>
 <md-button href="/notavailable">Examples</md-button>
 <md-button href="/notavailable">About</md-button>
 <md-button href="/notavailable">Blog</md-button>
 <md-button href="/notavailable">Login</md-button>
+-->
+<md-button href="/notavailable">Beta Request</md-button>
 <!--
 <div data-ng-show="!authentication.user">
   <md-button href="/authentication/signin">Log In</md-button >
