--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -13,7 +13,7 @@
 <md-button href="/notavailable">Blog</md-button>
 <md-button href="/notavailable">Login</md-button>
 -->
-<md-button href="/notavailable">Beta Request</md-button>
+<md-button href="/notavailable">Request Access</md-button>
 <!--
 <div data-ng-show="!authentication.user">
   <md-button href="/authentication/signin">Log In</md-button >
