--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -11,7 +11,7 @@
         </div>
         <br>
         <md-button class="md-raised md-primary splash" href="/notavailable">
-          Request Beta Access
+          Request Access to Beta
         </md-button>
         <!--
         <md-button class="md-raised md-secondary splash" href="/notavailable">
@@ -79,6 +79,6 @@
 </md-content>
 
 <section class="md-padding md-docs-dark-theme">
-  
+
   Copyright 2016 Merlin Onboarding. All rights reserved.
 </section>
