--- a/modules/core/client/views/notavailable.client.view.html
+++ b/modules/core/client/views/notavailable.client.view.html
@@ -5,7 +5,7 @@
       Merlin is currently in closed beta.
     </div>
     <div class="heroTextTwo" style="text-align:center">
-      Sign up to our newsletter below for an invite.
+      Sign up to our newsletter below for access.
     </div>
 
     <!-- Begin MailChimp Signup Form -->
@@ -21,13 +21,12 @@
           <div class="clear">
             <md-button class="md-raised md-accent md-padding splash" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
               class="button">
-              Subscribe
+              Request Access
             </md-button>
           </div>
         </div>
       </form>
     </div>
   </center>
-
   </div>
 </section>
