--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -10,7 +10,7 @@
           Teach your staff inside of the products they actually use.
         </div>
         <br>
-        <md-button class="md-raised md-primary splash" href="/notavailable">
+        <md-button class="md-raised md-primary splash" href="/notavailable" style="width: 300px;">
           Request Access to Beta
         </md-button>
         <!--
