--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -57,7 +57,7 @@
         <div id="mc_embed_signup_scroll">
           <h3> Want to find out more about Merlin? Join our Mailing List </h3>
           <md-input-container class="md-block" style="max-width:400px">
-            <label>Email Address</label>
+            <label style="color: white;">Email Address</label>
             <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" required>
           </md-input-container>
 
