--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -214,6 +214,7 @@ html, body {margin:0;padding:0;height:100%;}
 .homepageSplash {
   height: 600px;
   border-bottom: 1px solid #CCC;
+  background-color: white;
 }
 
 .nightSky {
