Fixing out sourcing model.

--- a/modules/core/client/views/outsourcing.client.view.html
+++ b/modules/core/client/views/outsourcing.client.view.html
@@ -49,19 +49,6 @@
   </div>
 </section>
 <md-content class="signUpHero md-padding" style="text-align:center">
-  <center>
-          <h3> Signup today for your free trial today! </h3>
-            <md-button href="/notavailable" class="md-raised md-padding" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
-              class="button">
-              Sign Up
-            </md-button>
-            <md-button href="/notavailable" class="md-raised md-accent md-padding" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
-              class="button">
-              Show me more benefits
-            </md-button>
-  </center>
-</md-content>
-<md-content class="md-padding" style="text-align:center">
   <!-- Begin MailChimp Signup Form -->
   <center>
     <div id="mc_embed_signup">
@@ -70,7 +57,7 @@
         <div id="mc_embed_signup_scroll">
           <h3> Want to find out more about Merlin? Join our Mailing List </h3>
           <md-input-container class="md-block" style="max-width:400px">
-            <label>Email Address</label>
+            <label style="color: white;">Email Address</label>
             <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" required>
           </md-input-container>
 
@@ -87,7 +74,6 @@
     </div>
   </center>
 </md-content>
-
 <section class="md-padding md-docs-dark-theme">
   Copyright 2016 Merlin Onboarding. All rights reserved.
 </section>
