Redirect to Merlin Guides

--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -6,35 +6,6 @@
 </a>
 <span flex=""></span>
 <div hide-xs hide-sm layout="row">
-  <!--
-<md-button href="/notavailable">Use cases</md-button>
-<md-button href="/notavailable">Examples</md-button>
-<md-button href="/notavailable">About</md-button>
-<md-button href="/notavailable">Blog</md-button>
-<md-button href="/notavailable">Login</md-button>
--->
-<md-button href="/notavailable">Request Access</md-button>
-<!--
-<div data-ng-show="!authentication.user">
-  <md-button href="/authentication/signin">Log In</md-button >
-</div>
-<div data-ng-show="authentication.user">
-  <md-menu>
-    <md-button ng-click="openMenu($mdOpenMenu, $event)"> {{authentication.user.displayName}} </md-button>
-    <md-menu-content>
-      <md-menu-item>
-        <md-button ng-href="/settings"> Account </md-button>
-      </md-menu-item>
-      <md-menu-item>
-        <md-button ng-href="/api/auth/signout" target="_self"> Sign Out </md-button>
-      </md-menu-item>
-    </md-menu-content>
-    </md-menu> -->
-    <!--
-  <md-select ng-model="userBar" placeholder="{{authentication.user.displayName}}">
-    <md-option ng-value="settings" ng-href="/settings">Settings</md-option>
-    <md-option ng-value="logout" href="/auth/signout">Log Out</md-option>
-  </md-select>
-  -->
+<md-button href="https://www.merlinguides.com">Merlin Guides</md-button>
 </div>
 </div>
