--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -4,14 +4,14 @@
     </div>
     <div flex class="merlinHero" flex-order-xs="1">
         <div class="heroText">
-          Magically Simple Onboarding
+          Merlin Onboarding is now called Merlin Guides
         </div>
         <div class="heroTextTwo">
-          Teach your staff inside of the products they actually use.
+          New domain, same great product
         </div>
         <br>
-        <md-button class="md-raised md-primary splash" href="/notavailable" style="width: 300px;">
-          Request Access to Beta
+        <md-button class="md-raised md-primary splash" href="https://www.merlinguides.com" style="width: 300px;">
+          Go To MerlinGuides.com
         </md-button>
         <!--
         <md-button class="md-raised md-secondary splash" href="/notavailable">
@@ -20,60 +20,6 @@
     </div>
   </div>
 </section>
-<section class="homepageHowWork">
-  <div layout="row" layout-xs="column">
-    <div flex style="text-align:center" class="salesToolWorkflow" flex-order-xs="2">
-    </div>
-    <div flex class="rightTextExample" flex-order-xs="1">
-      <h2> Create easy guided workflows for your team </h2>
-      <h3> Merlin show your staff how to use the web applications your company uses inside of the software itself.
-        <br> No more searching in help centers or 2 hour webinars. </h3> 
-    </div>
-  </div>
-  <div layout="row" layout-xs="column">
-    <div flex class="leftTextExample">
-      <h2> Ensure your team performs certain tasks </h2>
-      <h3> Merlin allows you to create onboarding tasks and ensures they perform them, <br> giving you piece of mind. </h3> 
-    </div>
-    <div flex style="text-align:center" class="hrToolTodo">
-    </div>
-  </div>
-  <div layout="row" layout-xs="column">
-    <div flex style="text-align:center" class="helpCenterWatching" flex-order-xs="2">
-    </div>
-    <div flex class="rightTextExample" flex-order-xs="1">
-      <h2> So easy to setup </h2>
-      <h3> Just get a team member or manager to perform the task once using the extension and we'll record how they did it.
-         <br> No more wasted time learning LMS systems.</h3> 
-    </div>
-  </div>
-</section>
-<md-content class="signUpHero md-padding" style="text-align:center">
-  <!-- Begin MailChimp Signup Form -->
-  <center>
-    <div id="mc_embed_signup">
-      <form action="//startuppilots.us12.list-manage.com/subscribe/post?u=bec57b6339bfe0d6ca96c1c8d&id=a3a99f36ab" method="post"
-        id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-        <div id="mc_embed_signup_scroll">
-          <h3> Want to find out more about Merlin? Join our Mailing List </h3>
-          <md-input-container class="md-block" style="max-width:400px">
-            <label style="color: white;">Email Address</label>
-            <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" required>
-          </md-input-container>
-
-          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_bec57b6339bfe0d6ca96c1c8d_539f21672f" tabindex="-1" value=""></div>
-          <div class="clear">
-            <md-button class="md-raised md-accent md-padding" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
-              class="button">
-              Subscribe
-            </md-button>
-          </div>
-        </div>
-      </form>
-    </div>
-  </center>
-</md-content>
 <section class="md-padding md-docs-dark-theme">
   Copyright 2016 Merlin Onboarding. All rights reserved.
 </section>
